change ui for toggling between a file choice option and providing a custom file and fixed wrapping issue with file selection buttons
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@12058 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/runtaskform.css
+++ b/website/css/runtaskform.css
@@ -157,6 +157,8 @@ button.urlButton
     padding: 9px 10px 10px 10px;
     min-width: 490px;
     margin-bottom: 0;
+    display: inline-block;
+    white-space: nowrap;
 }
 
 .fileDiv button img
